[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/icon_128_node_element.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_128_circle_big.svg" type="Texture" id=2]
[ext_resource path="res://components/shared/node_display_tooltip.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/icon_128_phantom_ghost.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/icon_128_cleaned.svg" type="Texture" id=5]
[ext_resource path="res://components/elements/styled/style_color_auto_remap.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/icon_128_lock_closed.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id=13]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[node name="NodeHint" type="PanelContainer"]
visible = false
margin_right = 112.0
margin_bottom = 23.0
mouse_filter = 2
theme_type_variation = "PanelContainerWindow"
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 4.0
margin_right = 186.0
margin_bottom = 98.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_left = 4
custom_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_right = 166.0
margin_bottom = 84.0
mouse_filter = 2

[node name="Headline" type="HBoxContainer" parent="MarginContainer/Content"]
margin_right = 162.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 36 )
mouse_filter = 2

[node name="IconContainer" type="Control" parent="MarginContainer/Content/Headline"]
margin_right = 20.0
margin_bottom = 46.0
rect_min_size = Vector2( 20, 32 )
mouse_filter = 2

[node name="IconBG" type="Sprite" parent="MarginContainer/Content/Headline/IconContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.0392157, 0.509804, 0.423529, 1 )
position = Vector2( -10, 16 )
scale = Vector2( 0.413438, 0.413438 )
texture = ExtResource( 2 )

[node name="IconShadow" type="TextureRect" parent="MarginContainer/Content/Headline/IconContainer/IconBG"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 0.313726 )
margin_left = -48.0
margin_top = -42.3333
margin_right = 48.0
margin_bottom = 53.6667
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IconTex" type="TextureRect" parent="MarginContainer/Content/Headline/IconContainer/IconBG"]
unique_name_in_owner = true
modulate = Color( 0.866667, 1, 0.976471, 1 )
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="NodeNameID" type="Label" parent="MarginContainer/Content/Headline"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 162.0
margin_bottom = 46.0
rect_min_size = Vector2( 52, 46 )
rect_pivot_offset = Vector2( 26, 15 )
theme_type_variation = "Label_24"
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Node Name (ID)"

[node name="KindLabelAndIcons" type="HBoxContainer" parent="MarginContainer/Content"]
margin_top = 50.0
margin_right = 162.0
margin_bottom = 80.0

[node name="KindLabelBG" type="PanelContainer" parent="MarginContainer/Content/KindLabelAndIcons"]
unique_name_in_owner = true
margin_right = 52.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 26, 15 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="KindLabelText" type="Label" parent="MarginContainer/Content/KindLabelAndIcons/KindLabelBG"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
margin_right = 52.0
margin_bottom = 30.0
rect_min_size = Vector2( 52, 30 )
rect_pivot_offset = Vector2( 26, 15 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = "LabelBold"
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 13 )
text = "Kind"
valign = 1

[node name="Control" type="Control" parent="MarginContainer/Content/KindLabelAndIcons"]
margin_left = 56.0
margin_right = 78.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="NodeIconProtected" type="TextureRect" parent="MarginContainer/Content/KindLabelAndIcons"]
unique_name_in_owner = true
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 82.0
margin_right = 106.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )

[node name="NodeIconCleaned" type="TextureRect" parent="MarginContainer/Content/KindLabelAndIcons"]
unique_name_in_owner = true
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 110.0
margin_right = 134.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )

[node name="NodeIconPhantom" type="TextureRect" parent="MarginContainer/Content/KindLabelAndIcons"]
unique_name_in_owner = true
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 138.0
margin_right = 162.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )

[node name="DetailsContainer" type="GridContainer" parent="MarginContainer/Content"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 162.0
margin_bottom = 84.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
